--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
-  text-align: center;
+	text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
+.btn {
+	background-color: #e1ecf4;
+	border-radius: 1.25rem;
+	border: 1px solid #7aa7c7;
+	color: #39739d;
+	cursor: pointer;
+	font-size: 16pt;
+	line-height: 1.5;
+	outline: none;
+	padding: 8px 1em;
+}
+
+.btn:hover {
+	background-color: #b3d3ea;
+	color: #2c5777;
+	box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+}
+
+/* .btn:focus {
+	box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+} */
+
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
